# ESP32-Haptic-Precision-TouchPad

./: .gitignore  README.md  README_CN.md  haptic-test.wara
2.4G/: CMakeLists.txt  sdkconfig.defaults
2.4G/main/: Kconfig.projbuild  main.c
2.4G/main/usb/: usb_descriptor.c  usbhid.c  usbhid.h
2.4G/main/wireless/: heartbeat.c  wifi_quene.c  wireless.h
Hacking/: IP5209.c  MP28167GQ-A-Z.c  README.md  cs40l25_haptic_strength_test.c  cs40l25_rom_test.c  cs40l25_surface_fw_test.c  hack_hid_mouse_report.c
Main/: .gitignore  CMakeLists.txt  cs40l25_sym.h  haptic-test.h  sdkconfig.defaults
Main/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
Main/main/BLE/: BLE_bluedroid.h  ble_bluedroid_init.c  ble_hid_descriptor.c  ble_hid_dev.c  ble_hid_dev.h  ble_hid_device_le_prf.c  blehid.c  esp_hidd_prf_api.c  esp_hidd_prf_api.h  hidd_le_prf_int.h
Main/main/GPIO/: GPIO_handle.h  gpio_handle.c  gpio_init.c  irq_func_btn.c  irq_tp_int.c
Main/main/I2C/: I2C_handle.h  i2c_cmd.c  i2c_hid.h  i2c_quene.c  i2c_queue.c  i2c_watchdog.c
Main/main/I2C/SUB_DEV/: IP5X09_handle.c  cs40l25_surface.c  cs40l25_surface.h  mp28167_handle.c  sub_dev.h  sub_i2c_init.c
Main/main/I2C/SUB_DEV/mcu-drivers/common/: bsp_driver_if.h  fw_img.c  regmap.c  regmap.h  scc.c  scc.h
Main/main/I2C/SUB_DEV/mcu-drivers/common/bridge/: bridge.c  bridge.h
Main/main/I2C/SUB_DEV/mcu-drivers/common/buffers/: data_ringbuf.c  dspbuf.c  dspbuf.h
Main/main/I2C/SUB_DEV/mcu-drivers/common/compression/: decompr.c  decompr.h  msbc.c  msbc.h  packed16.c  packed16.h
Main/main/I2C/SUB_DEV/mcu-drivers/common/platform_bsp/: platform_bsp.c  platform_bsp.h  syscalls.c  sysmem.c
Main/main/I2C/SUB_DEV/mcu-drivers/cs40l25/: cs40l25.c  cs40l25.h  cs40l25_ext.c  cs40l25_ext.h  cs40l25_fw_img.h  cs40l25_spec.c  cs40l25_sym.h  cs40l25_syscfg_regs.c  cs40l25_syscfg_regs.h
Main/main/I2C/SUB_DEV/mcu-drivers/cs40l25/bsp/: bsp_cs40l25.c  bsp_dut.h  vregmap.c  vregmap.h
Main/main/I2C/SUB_DEV/mcu-drivers/cs40l25/config/: cs40l25_sym.h
Main/main/I2C/SUB_DEV/mcu-drivers/fw_img/: cs40l25_cal_fw_img.c  cs40l25_cal_fw_img.h  cs40l25_fw_img.c  cs40l25_fw_img.h  cs40l25_fw_img_surface_overlay.c  cs40l25_fw_img_surface_overlay.h  cs40l25_sym.h
Main/main/I2C/SUB_DEV/mcu-drivers/fw_img/surface_bundle/: IMPORT_NOTES.txt  cs40l25_cal_sym.h  cs40l25_fw_img.c
Main/main/I2C/TP/: i2c_cmd.c  i2c_hid.h  i2c_queue.c  i2c_watchdog.c  ptp_simulated_gesture.c  tp_report_handle.c  tp_sleep.c
Main/main/NVS/: nvs_handle.c  nvs_handle.h
Main/main/SYS/: hid_msg.c  hid_msg.h  rtos_queue.c  rtos_queue.h
Main/main/USB/: usb_descriptor.c  usbhid.c
Main/main/WIFI/: broadcast.c  heartbeat.c  wifi_handle.c  wireless_wifi.h
Main/main/test/: MP28167GQ-A-Z.c  README.md  RMI4 TEST.c  WIFI.c  hack_hid_mouse_ptp.c  hid_descriptor_test.c  i2c_addr_scanner.c
ble_hid_device_demo/: .gitignore  CMakeLists.txt
ble_hid_device_demo/main/: ble_hidd_demo_main.c  esp_hidd_prf_api.c  esp_hidd_prf_api.h  hid_dev.c  hid_dev.h  hid_device_le_prf.c  hidd_le_prf_int.h
esp_hid_device_demo/: .gitignore  CMakeLists.txt  sdkconfig.defaults  sdkconfig.defaults.esp32s3
esp_hid_device_demo/main/: esp_hid_device_main.c  esp_hid_gap.c  esp_hid_gap.h
